--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,12 +1,2 @@
-runtime: python310
-handlers:
-  - url: /scripts
-    static_dir: scripts
-  - url: /styles
-    static_dir: styles
-  - url: /(.*\.html)
-    static_files: \1
-    upload: .*\.html
-  - url: /
-    static_files: index.html
-    upload: index.html
+runtime: nodejs20
+service: default
