--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -1,11 +1,10 @@
 steps:
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
-    dir: "frontend"
     entrypoint: "bash"
     args:
       [
         "-c",
-        "gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy",
+        "gcloud app deploy --quiet",
       ]
 timeout: "1600s"
 
