--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -1,18 +1,9 @@
 steps:
-  # Build dengan Buildpack untuk Cloud Run (tanpa Docker)
-  - name: gcr.io/buildpacks/builder
-    args:
-      [
-        "pack",
-        "build",
-        "gcr.io/$PROJECT_ID/tcc-be",
-        "--builder",
-        "gcr.io/buildpacks/builder:v1",
-        "--path",
-        "./backend"
-      ]
+  # Membuat image dari folder backend
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/tcc-be", "./backend"]
 
-  # Push image ke Google Container Registry
+  # Push image ke Artifact Registry
   - name: "gcr.io/cloud-builders/docker"
     args: ["push", "gcr.io/$PROJECT_ID/tcc-be"]
 
@@ -31,7 +22,7 @@ steps:
         "5000",
         "--region",
         "us-central1",
-        "--allow-unauthenticated"
+        "--allow-unauthenticated",
       ]
 
 options:
