--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,16 +1,14 @@
-runtime: python310
-entrypoint: gunicorn -b :$PORT main:app
+runtime: nodejs16
+
+env: flex
+
+instance_class: F2
+
+entrypoint: npm start
 
 handlers:
-  - url: /style
-    static_dir: style
-
-  - url: /scripts
-    static_dir: scripts
-
-  - url: /editnote.html
-    static_files: editnote.html
-    upload: editnote.html
+  - url: /static
+    static_dir: static/
 
   - url: /
     static_files: index.html
