--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -1,6 +1,5 @@
 steps:
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
-    dir: "frontend"
     entrypoint: "bash"
     args:
       [
@@ -8,3 +7,6 @@ steps:
         "gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy",
       ]
 timeout: "1600s"
+
+options:
+  logging: CLOUD_LOGGING_ONLY
