--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,15 +1,13 @@
-runtime: nodejs16
-
-env: flex
-
-instance_class: F2
-
-entrypoint: npm start
+runtime: nodejs20  # Menggunakan Node.js untuk hosting frontend statis (HTML, CSS, JS)
+service: default  # Menentukan service utama untuk aplikasi ini
 
 handlers:
   - url: /static
-    static_dir: static/
-
-  - url: /
-    static_files: index.html
+    static_dir: static/  # Menyajikan file statis yang ada di folder static
+  - url: /scripts
+    static_dir: scripts/  # Menyajikan file JavaScript dari folder scripts
+  - url: /styles
+    static_dir: styles/  # Menyajikan file CSS dari folder styles
+  - url: /.*
+    static_files: index.html  # File utama yang akan dipanggil ketika mengakses aplikasi
     upload: index.html
