--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
+API_HOST = "146.148.47.205"
+API_USERNAME = "root"
+API_PASSWORD = ""
+API_DATABASE = "notes_db"
 ACCESS_TOKEN_SECRET = rahasia123
 REFRESH_TOKEN_SECRET = rahasia456
