--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+#mengambil data dari .env yang disimpan di cloud storage pake gsuri
+- name: "gcr.io/cloud-builders/gcloud"
   # Membuat image dari folder backend
   - name: "gcr.io/cloud-builders/docker"
     args: ["build", "-t", "gcr.io/$PROJECT_ID/tcc-be", "./backend"]
